log
Wed 27 Mar 2024 05:42:29 PM UTC: 
 tests:  0|6
total_score: 0/70
d2df628
Wed 27 Mar 2024 05:50:05 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
54ae50d
Wed 27 Mar 2024 05:54:56 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
f7842b9
Wed 27 Mar 2024 05:55:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b7d1d25
Wed 27 Mar 2024 05:55:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:10: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   49 |   return newNode;
      |          ^~~~~~~
      |          Node
list.c:49:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
24f57c6
Wed 27 Mar 2024 05:56:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
dc7b2d2
Wed 27 Mar 2024 05:59:11 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a4f1962
Wed 27 Mar 2024 05:59:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
16847c0
Wed 27 Mar 2024 05:59:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
695d3eb
Wed 27 Mar 2024 06:00:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:21: error: too few arguments to function ‘createNode’
   44 |     Node* newNode = createNode();
      |                     ^~~~~~~~~~
list.c:22:8: note: declared here
   22 | Node * createNode(void * data) {
      |        ^~~~~~~~~~
Compilation failed
7bb2ffa
Wed 27 Mar 2024 06:01:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2ab0e83
Wed 27 Mar 2024 06:02:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9bb51db
Wed 27 Mar 2024 06:07:49 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:55:21: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   55 |     list->current = newNode;
      |                     ^~~~~~~
      |                     Node
list.c:55:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6359641
Wed 27 Mar 2024 06:09:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:55:21: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   55 |     list->current = newNode;
      |                     ^~~~~~~
      |                     Node
list.c:55:21: note: each undeclared identifier is reported only once for each function it appears in
list.c:59:29: error: expected ‘;’ before ‘}’ token
   59 |   return list->current->data
      |                             ^
      |                             ;
   60 | }
      | ~                            
Compilation failed
98fa7b1
Wed 27 Mar 2024 06:09:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:55:21: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   55 |     list->current = newNode;
      |                     ^~~~~~~
      |                     Node
list.c:55:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c4c5917
Wed 27 Mar 2024 06:09:59 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5ce18e9
Wed 27 Mar 2024 06:10:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2c6cf05
Wed 27 Mar 2024 06:13:45 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e99a3f7
Wed 27 Mar 2024 06:14:19 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:55:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   55 |   if(list->current == NULL)
      |   ^~
list.c:57:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   57 |     newNode->prev = list->current;
      |     ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
debaa94
Wed 27 Mar 2024 06:14:34 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
2c7da90
Wed 27 Mar 2024 06:14:51 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 15/70
30281a6
Wed 27 Mar 2024 06:15:00 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 15/70
0410cd4
Wed 27 Mar 2024 06:15:37 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
18dc58d
Wed 27 Mar 2024 06:23:06 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
a84323b
Wed 27 Mar 2024 06:23:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e95ec4d
Wed 27 Mar 2024 06:28:08 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
0edcfcb
Wed 27 Mar 2024 06:29:28 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:58:35: error: ‘next’ undeclared (first use in this function)
   58 |     list->current = list->current-next;
      |                                   ^~~~
list.c:58:35: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
aa3f3b1
Wed 27 Mar 2024 06:30:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
68d57c4
Wed 27 Mar 2024 06:38:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a0bfd0b
Wed 27 Mar 2024 06:47:43 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|5
total_score: 15/70
71065f4
Wed 27 Mar 2024 06:48:06 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
9f46669
Wed 27 Mar 2024 06:50:58 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:59:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   59 |   else;
      |   ^~~~
list.c:60:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   60 |     list->current = list->current->next;
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
f7d518e
Wed 27 Mar 2024 06:51:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
80f3aa9
Wed 27 Mar 2024 06:57:47 PM UTC: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|0
d7926fa
Wed 27 Mar 2024 06:58:20 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
9eee5f5
Wed 27 Mar 2024 06:58:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f8f01a4
Wed 27 Mar 2024 06:59:42 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
7c80fcb
Wed 27 Mar 2024 07:01:14 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
e093aa8
Wed 27 Mar 2024 07:01:48 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
1cdcf10
Wed 27 Mar 2024 07:12:38 PM UTC: 
 list.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:83:7: error: unused variable ‘cont’ [-Werror=unused-variable]
   83 |   int cont = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
bd4ef9f
Wed 27 Mar 2024 07:12:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
13eaedc
Wed 27 Mar 2024 07:15:50 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
c8ed1cf
Wed 27 Mar 2024 07:18:13 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:109:20: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  109 |   return list->head->data;
      |          ~~~~~~~~~~^~~~~~
list.c:101:6: note: declared here
  101 | void pushFront(List * list, void * data)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
333c541
